data/derived/comb/progs/unify/prog6967.ml.out
Characters 70-71:
  wwhile (funt,b);;
               ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
